--- a/frontEnd/src/locales/kg/translation.json
+++ b/frontEnd/src/locales/kg/translation.json
@@ -1,10 +1,18 @@
 {
   "common":{
+    "add": "Кошуу",
     "save": "Сактоо",
     "cancel": "Жокко чыгаруу",
     "delete": "Өчүрүү",
     "edit": "Түзөтүү",
+    "create":"Жасоо",
     "update": "Жаңылоо",
+    "approved": "Ырасталды",
+    "approve": "Ырастоо",
+    "reject": "Баш тартуу",
+    "rejected": "Баш тартылды",
+    "pending": "Күтүүдө",
+    "saving": "Сакталууда...",
     "yes": "Ооба",
     "no": "Жок",
     "close": "Жабуу",
@@ -14,7 +22,8 @@
     "back": "Артка",
     "next": "Кийинки",
     "previous": "Мурунку",
-    "confirm": "Ырастоо"
+    "confirm": "Ырастоо",
+    "more": "Толугураак"
   },
   "header": {
     "home": "Башкы бет",
@@ -37,7 +46,11 @@
     "logout": "Чыгуу",
     "name": "Атыңыз",
     "email": "Электрондук почта",
+    "phone": "Телефон номери",
     "password": "Сырсөз",
+    "namePlaceholder": "аты",
+    "emailPlaceholder": "Электрондук почта",
+    "passwordPlaceholder": "Сыр сөз",
     "confirmPassword": "Сырсөздү кайра киргизүү",
     "forgotPassword": "Сырсөздү унуттуңузбу?",
     "resetPassword": "Сырсөздү жаңылоо",
@@ -50,17 +63,183 @@
     "verifyOtp": "Кодду текшерүү",
     "verificationCode": "Текшерүү коду",
     "successRegistration": "Сиз ийгиликтүү катталдыңыз!",
-    "successLogin": "Сиз ийгиликтүү кирдиңиз!"
-  },  
-    "booking": {
-      "title": "Брондоо",
+    "successLogin": "Сиз ийгиликтүү кирдиңиз!",
+    "myProfile": "Менин профилим",
+    "saveChanges": "Өзгөртүүлөрдү сактоо",
+    "noAccount": "Аккаунтуңуз жокпу? Катталуу",
+    "fillFields": "Бардык талааларды толтуруңуз.",
+    "success": "Ийгиликтүү кирдиңиз!",
+    "failed": "Кирүү ишке ашкан жок. Маалыматтарыңызды текшериңиз.",
+    "verifyOtpTitle": "🔐 OTPни тастыктаңыз",
+    "resetTitle": "🔐 Сыр сөздү өзгөртүү",
+    "newPasswordLabel": "Жаңы сыр сөз",
+    "resetButton": "Сыр сөздү жаңыртуу",
+    "successTitle": "Сыр сөз ийгиликтүү өзгөртүлдү",
+    "successMessage": "Сыр сөзүңүз жаңыртылды.",
+    "backToLogin": "Кайра кирүү барагына кайтуу"
+  }, 
+  "admin":{
+    "title": "Админге кош келиңиз",
+    "dashboard": "Админ Панель",
+    "totalTours": "Бардык турлар",
+    "manageTours": "Турларды башкаруу",
+    "totalBookings": "Бардык брондоолор",
+    "manageBookings": "Брондоолорду башкаруу",
+    "totalUsers": "Бардык колдонуучулар",
+    "manageUsers": "Колдонуучуларды башкаруу",
+    "adminSettings": "Админ орнотуулары",
+    "viewReports": "Баяндамачаларды көрүү",
+    "settings": "Орнотуулар",
+    "resources": "Ресурстар",
+    "resourcesDetails": "Ресурстарды башкаруу",
+    "customers": "Кардарлар",
+    "logout": "Чыгуу",
+    "welcome": "Админ Панелге кош келиңиз",
+    "loading": "Маалыматтар жүктөлүүдө...",
+    "whatsAppNumber":"WhatsApp номери ",
+    "manageResources":"Ресурстарды башкаруу",
+    "manageCustomers":"Кардарларды башкаруу",
+    "addCustomer":"Кардар кошуу ",
+    "manageResourceDetails":"Ресурс деталдарын башкаруу ",
+    "existingResourceDetails":"Бардык ресурс деталдары "
+  },
+  "manage": {
+    "tour":"Тур",
+    "user":"Колдонуучу",
+    "email":"Электрондук почта",
+    "date":"Дата",
+    "status":"Абалы",
+    "actions":"Иш-аракеттер",
+    "addCustomerDetail":"Кардардын деталдарын кошуу",
+    "addResources":"Ресурстарды кошуу",
+    "addTours":"Турларды кошуу",
+    "editTour":"Турду түзөтүү",
+    "resourceDetail":"Ресурс деталдары",
+    "resourceId": "Ресурс ID:",
+    "selectResource": "Ресурсту тандаңыз",
+    "editTitle": "Кардарды өзгөртүү",
+    "addTitle": "Жаңы кардарды кошуу",
+    "resourceDetailId": "Ресурс деталынын ID:",
+    "names": "Аттары:",
+    "photos": "Сүрөттөр:",
+    "videos": "Видеолор:",
+    "removePhoto": "Өчүрүү",
+   "key": "Ачкыч:",
+   "count": "Саны:",
+   "link": "Ссылка:",
+   "image": "Сүрөт:",
+   "translations": "Котормолор",
+  "role": "Орду:",
+  "joined": "Кошулган күнү:",
+  "phone": "Телефон:",
+  "noUsersFound": "Колдонуучулар табылган жок.",
+  "promote":"жогорулатуу",
+  "demote":"төмөндөтүү",
+  "addInclude":"Киргизүү кошуу",
+  "addDate":"Дата кошуу",
+  "addImage":"Сүрөт кошуу",
+  "updateTour":"Турду жаңыртуу",
+  "tourUpdatedSuccessfully": "Тур ийгиликтүү жаңыртылды!"
+  },
+  "tour": {
+    "ourTravels": "БИЗДИН САПАРЛАР",
+    "searchTours": "Турларды издөө.....",
+    "details": "Толугураак",
+    "title": "Жаңы тур кошуу",
+    "name": "Аталышы",
+    "description": "Сүрөттөмө",
+    "duration": "Узактыгы",
+    "days": "күн",
+    "price": "Баасы",
+    "bookNow": "Брондоо",
+    "durationOptions": {
+      "select": "Тандоо",
+      "1": "1 күн",
+      "2": "2 күн",
+      "3": "3 күн",
+      "7": "1 жума",
+      "custom": "Ыңгайлаштырылган"
+    },
+    "startDates": "Башталыш даталары",
+    "location": "Жайгашкан жери",
+    "maxGuests": "Макс. коноктор",
+    "category": "Категория",
+    "categoryOptions": {
+      "select": "Тандоо",
+      "Adventure": "Саякат",
+      "Relax": "Эс алуу",
+      "Cultural": "Маданий",
+      "City": "Шаардык",
+      "Other": "Башка",
+      "Nature": "Табият"
+    },
+    "includes": "Кирген кызматтар",
+    "images": "Сүрөттөр",
+    "addButton": "Кошуу",
+    "select": "Тандоо",
+      "hotel": "Мейманкана",
+      "hotelPlaceholder": "Мейманкананын атын жазыңыз",
+    "validation": {
+      "nameRequired": "Турдун аты сөзсүз керек",
+      "descRequired": "Сүрөттөмө керек",
+      "priceRequired": "Баасы керек",
+      "durationRequired": "Узактыгын тандаңыз",
+      "locationRequired": "Жайгашкан жер керек",
+      "guestsRequired": "Коноктор саны керек",
+      "categoryRequired": "Категория тандаңыз",
+      "imageRequired": "Кеминде бир сүрөт кошуңуз",
+      "includesRequired": "Кеминде бир кызмат кошуңуз",
+      "startDateRequired": "Кеминде бир башталыш датасы керек"
+    },
+    "successMessage": "Тур ийгиликтүү кошулду!",
+    "errorMessage": "Турду кошууда ката кетти",
+    "errors": {
+      "titleRequired": "Бардык тилдерде аталыш талап кылынат.",
+      "descriptionRequired": "Бардык тилдерде сүрөттөмө талап кылынат.",
+      "priceInvalid": "Баасы жарактуу жана терс эмес сан болушу керек.",
+      "durationRequired": "Убакыт мөөнөтү талап кылынат.",
+      "locationRequired": "Бардык тилдерде жайгашкан жери талап кылынат.",
+      "categoryRequired": "Категория талап кылынат.",
+      "hotelRequired": "Мейманкананын аты талап кылынат.",
+      "maxGuestsInvalid": "Коноктордун саны жок дегенде 1 болушу керек.",
+      "imagesRequired": "Жок дегенде бир сүрөт талап кылынат.",
+      "includesRequired": "Бардык тилдерде камтылган нерселер көрсөтүлүшү керек.",
+      "startDatesRequired": "Жок дегенде бир башталыш күнү талап кылынат."
+    }
+  }, 
+  "booking": {
+    "myBookings":"Менин брондоолорум",
+      "booking": "Брондоо",
       "destination": "Багыт",
       "destination_placeholder": "Каякка барабыз?",
       "date": "Дата",
       "guests": "Коноктор",
       "guests_placeholder": "2 чоң киши",
-      "searching": "Турлар изденүүдө..."
-    },
+      "searching": "Турлар изденүүдө...",
+      "title": "Кыялдагы саякатыңыз ушул жерден башталат!",
+      "loading": "Жүктөлүүдө...",
+      "form": {
+        "name": "Толук аты-жөнү",
+        "phone": "Телефон номери",
+        "email": "Электрондук почта дареги",
+        "address": "Дарегиңиз (шаар, айыл, көчө, үй)",
+        "guests": "Конок(тор)",
+        "selectGuests": "{{count}} конок(тор)",
+        "date": "Саякат күнү",
+        "message": "Кошумча каалоо / Билдирүү",
+        "send": "WhatsApp аркылуу брондоо жөнөтүү"
+      },
+      "status": {
+        "pending": "Күтүүдө",
+        "approved": "Бекитилди",
+        "cancelled": "Жокко чыгарылды"
+      },
+      "alert": {
+        "loginRequired": "❌ Брондоо үчүн кирүүңүз керек.",
+        "success": "✅ Брондоо сурамы ийгиликтүү жөнөтүлдү! 'Менин брондоолорумду' текшериңиз.",
+        "failed": "❌ Брондоо ишке ашкан жок. Кайра аракет кылыңыз."
+      }
+  },
     "pagination": {
       "title": "Бар турлар",
       "previous": "⬅ Артка",
@@ -73,13 +252,60 @@
       "ticket": "Билет камсыздандыруу",
       "activities": "Иш-чаралар",
       "travel": "Саякат тандоолору",
-      "sightseeing": "Көрө турган жерлер"
+      "sightseeing": "Көрө турган жерлер",
+      "tailored": "Маалыматка ылайык түзүлгөн жеке турлар — тоо жөө жүрүштөн баштап юртта түнөөгө чейин.",
+      "local_experts": "Жергиликтүү гиддер аймактын табияты менен салттарын көрсөтүп, чыныгы кыргыз тажрыйбасын сунуштайт.",
+      "support_safety": "Транспорттон баштап турак жайга чейин — бардык жүктү биз алабыз, сиз эс аласыз.",
+      "hidden_gems": "Чыгыш-батыш жолдордон сырткары, Баткен аймагынын жана андан ары өлкөнүн сырларын ачышыңыз үчүн меню түзүлгөн."  
     }, 
+    "advertisment":{
+      "mainItem": "Сизде суроолор барбы",
+      "contuctUs": "Биз менен байланышыңыз"
+    },
+    "aboutUs": {
+      "missionTitle": "Биздин максат",
+      "ourStoryTitle": "Биздин тарых",
+      "ourStory": "Batken Travel Service — бул Баткен облусунун жүрөгүндө негизделген жана бүгүн эл аралык деңгээлде иш алып барган саякат компаниясы. Биз Кыргызстандын кооз тоолору менен өрөөндөрүн гана эмес, ошондой эле Өзбекстан, Дубай, Түркия жана Вьетнам сыяктуу популярдуу өлкөлөргө да өзгөчө турларды уюштурабыз. Максатыбыз — ар бир саякатчыга чыныгы тажрыйба, ыңгайлуулук жана көңүл бурууну камсыз кылуу.",
+      "mission": "Биздин миссия — саякатты жеткиликтүү, шыктандырган жана маанилүү кылуу. Ар бир мейман жаңы маданияттарды ачып, дүйнө жүзү боюнча жоопкерчиликтүү жана туруктуу туризмди колдосун деп ишенебиз."
+    },
+    "contact":{
+      "contacts": "Байланыштар",
+    "location": "Дарек",
+    "city": "Баткен шаары",
+    "street": "Сайдыман Ажы 2/8",
+    "floor": "2-кабат",
+    "phone": "Телефон",
+    "hours": "Иштөө убактысы",
+    "workingHours": "8:00 - 20:00"
+    },  
+    "ratings": {
+      "noRatings": "Баалар али жок",
+      "reviews": "Пикирлер",
+      "rateThisTour": "Бул турга баа бериңиз:",
+      "thanks": "Рахмат!",
+      "averageRating": "Орточо баа",
+      "notRatedYet": "Азырынча бааланган жок",
+      "totalRatings": "Жалпы баалар"
+    },
     "resources":{
       "hubspotByNumbers": "HubSpot сандар менен",
       "learnMore": "Көбүрөөк билүү",
       "loading": "Жүктөлүүдө"
-    },    
+    }, 
+    "partners": {
+      "title": "Ишенимдүү өнөктөштөрүбүз",
+      "loading": "Өнөктөштөр жүктөлүүдө...",
+      "noPhotos": "Өнөктөштөрдүн сүрөттөрү табылган жок.",
+      "subtitle": "Биз дүйнө жүзүндөгү алдыңкы компаниялар менен кызматташканыбызга сыймыктанабыз.",
+      "whyTitle": "Эмне үчүн өнөктөштөр бизди тандашат",
+      "whyText": "Өнөктөштөр бизге берилгендигибиз, инновацияларыбыз жана мыкты болууга умтулуу үчүн ишенишет. Биз биргелешип өсүү мүмкүнчүлүктөрүн түзүп, кардарларыбызга жогорку баалуулук тартуулайбыз."
+    },
+    "customers":{
+      "title": "Биздин бактылуу кардарларыбы",
+      "comments": "Пикирлер",
+      "writeComment": "Пикир жазуу",
+      "customerNotFound": "Кардарлардын сын-пикирлери табылган жок."
+    },
   "footer": {
     "home": "Башкы бет",
     "tours": "Турлар",
