--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -1,10 +1,18 @@
 {
   "common":{
+    "add": "Добавить",
     "save": "Сохранить",
     "cancel": "Отмена",
     "delete": "Удалить",
     "edit": "Редактировать",
+    "create":"Создать",
     "update": "Обновить",
+    "approved": "Одобрено",
+    "approve": "Одобрить",
+    "reject": "Отклонить",
+    "rejected": "Отклонено",
+    "pending": "В ожидании",
+    "saving": "Сохранение...",
     "yes": "Да",
     "no": "Нет",
     "close": "Закрыть",
@@ -14,7 +22,8 @@
     "back": "Назад",
     "next": "Далее",
     "previous": "Предыдущий",
-    "confirm": "Подтвердить"
+    "confirm": "Подтвердить",
+    "more": "Подробнее"
   },
     "header": {
       "home": "Главная",
@@ -38,7 +47,11 @@
       "logout": "Выйти",
       "name": "Имя",
       "email": "Эл. почта",
+      "phone": "Телефон",
       "password": "Пароль",
+      "namePlaceholder": "имя",
+      "emailPlaceholder": "Электронная почта",
+      "passwordPlaceholder": "Пароль",
       "confirmPassword": "Подтвердите пароль",
       "forgotPassword": "Забыли пароль?",
       "resetPassword": "Сбросить пароль",
@@ -51,17 +64,186 @@
       "verifyOtp": "Подтвердить код",
       "verificationCode": "Код подтверждения",
       "successRegistration": "Вы успешно зарегистрировались!",
-      "successLogin": "Вход выполнен успешно!"
+      "successLogin": "Вход выполнен успешно!",
+      "myProfile":"Мой профиль",
+      "saveChanges":"Сохранить изменения",
+      "noAccount": "Нет аккаунта? Зарегистрируйтесь",
+      "alert": {
+        "fillFields": "Пожалуйста, заполните все поля.",
+        "success": "Вход выполнен успешно!",
+        "failed": "Ошибка входа. Проверьте свои данные.",
+        "sendOtp": "Отправить OTP",
+        "verifyOtpTitle": "🔐 Подтвердите OTP",
+        "resetTitle": "🔐 Сброс пароля",
+        "newPasswordLabel": "Новый пароль",
+        "resetButton": "Сбросить пароль",
+        "successTitle": "Пароль успешно изменён",
+        "successMessage": "Ваш пароль был обновлён.",
+        "backToLogin": "Назад к входу"
+      }
     },
-      "booking": {
-        "title": "Бронирование",
-        "destination": "Направление",
-        "destination_placeholder": "Куда поедем?",
-        "date": "Дата",
-        "guests": "Гости",
-        "guests_placeholder": "2 взрослых",
-        "searching": "Поиск туров..."
+    "admin":{
+      "title": "Добро пожаловать, Админ",
+      "dashboard": "Админ Панель",
+      "totalTours": "Всего туров",
+      "manageTours": "Управление турами",
+      "totalBookings": "Всего бронирований",
+      "manageBookings": "Управление бронированиями",
+      "totalUsers": "Всего пользователей",
+      "manageUsers": "Управление пользователями",
+      "adminSettings": "Настройки админа",
+      "resources":"РЕСУРСЫ",
+      "resourcesDetails": "Управление ресурсами",
+      "customers":"Клиенты",
+      "addTour": "Добавить тур",
+      "viewUsers": "Просмотр пользователей",
+      "logout": "Выйти",
+      "welcome": "Добро пожаловать в Админ Панель",
+      "loading": "Загрузка данных...",
+      "whatsAppNumber":" Номер WhatsApp ",
+      "manageResources":" Управление ресурсами ",
+      "manageCustomers":" Управление клиентами ",
+      "addCustomer":" Добавить клиента ",
+      "manageResourceDetails":" Управление деталями ресурсов ",
+      "existingResourceDetails":" Существующие детали ресурсов "
+    },
+    "manage": {
+      "tour":"Тур",
+      "user":"Пользователь",
+      "email":"Эл. почта",
+      "date":"Дата",
+      "status":"Статус",  
+      "actions":"Действия",
+      "addCustomerDetail":"Добавить детали клиента",
+      "addResources":"Добавить ресурсы",
+      "addTours":"Добавить туры",
+      "editTour":"Редактировать тур",
+      "resourceDetail":"Детали ресурса",  
+      "resourceId": "ID ресурса:",
+      "selectResource": "Выбрать ресурс",
+      "editTitle": "Редактировать клиента",
+      "addTitle": "Добавить клиента",
+      "resourceDetailId": "ID детали ресурса:",
+      "names": "Имена:",
+      "photos": "Фотографии:",
+      "videos": "Видео:",
+      "removePhoto": "Удалить",
+      "key": "Ключ:",
+      "count": "Количество:",
+      "link": "Ссылка:",
+      "image": "Изображение:",
+      "translations": "Переводы",
+      "role": "Роль:",
+      "joined": "Присоединился:",
+      "phone": "Телефон",
+      "noUsersFound": "Пользователи не найдены.",
+      "promote":"повысить", 
+      "demote":"понизить",
+      "addInclude":"Добавить включение",
+      "addDate":"Добавить дату",
+      "addImage":"Добавить изображение",
+      "updateTour":"Обновить тур",
+      "tourUpdatedSuccessfully":"Тур успешно обновлен!"
+    },
+    "tour": {
+      "ourTravels": "НАШИ ПУТЕШЕСТВИЯ",
+      "searchTours": "Искать туры....",
+      "details": "Детали",
+      "title": "Добавить новое путешествие",
+      "name": "Название",
+      "description": "Описание",
+      "price": "Цена",
+      "days": "дней",
+      "bookNow": "Забронировать",
+      "duration": "Продолжительность",
+      "durationOptions": {
+        "select": "Выбрать",
+        "1": "1 день",
+        "2": "2 дня",
+        "3": "3 дня",
+        "7": "1 неделя",
+        "custom": "Индивидуально"
       },
+      "startDates": "Даты начала",
+      "location": "Местоположение",
+      "maxGuests": "Макс. гостей",
+      "category": "Категория",
+      "categoryOptions": {
+        "select": "Выбрать",
+        "Adventure": "Приключение",
+        "Relax": "Отдых",
+        "Cultural": "Культурный",
+        "City": "Городской",
+        "Other": "Другое",
+        "Nature": "Природа"
+      },
+      "includes": "Включено",
+      "images": "Изображения",
+      "addButton": "Добавить",
+      "select": "Выбрать",
+        "hotel": "Отель",
+        "hotelPlaceholder": "Введите название отеля",
+      "validation": {
+        "nameRequired": "Название тура обязательно",
+        "descRequired": "Описание обязательно",
+        "priceRequired": "Цена обязательна",
+        "durationRequired": "Выберите продолжительность",
+        "locationRequired": "Укажите местоположение",
+        "guestsRequired": "Введите количество гостей",
+        "categoryRequired": "Выберите категорию",
+        "imageRequired": "Добавьте хотя бы одно изображение",
+        "includesRequired": "Добавьте хотя бы один пункт 'включено'",
+        "startDateRequired": "Добавьте хотя бы одну дату начала"
+      },
+      "successMessage": "Тур успешно добавлен!",
+      "errorMessage": "Ошибка при добавлении тура",
+      "errors": {
+        "titleRequired": "Название обязательно для всех языков.",
+        "descriptionRequired": "Описание обязательно для всех языков.",
+        "priceInvalid": "Цена должна быть действительным неотрицательным числом.",
+        "durationRequired": "Продолжительность обязательна.",
+        "locationRequired": "Местоположение обязательно для всех языков.",
+        "categoryRequired": "Категория обязательна.",
+        "hotelRequired": "Название отеля обязательно.",
+        "maxGuestsInvalid": "Максимальное количество гостей должно быть не менее 1.",
+        "imagesRequired": "Требуется хотя бы одно изображение.",
+        "includesRequired": "Пункты включений должны быть указаны на всех языках.",
+        "startDatesRequired": "Требуется хотя бы одна дата начала."
+      }
+    },
+    "booking": {
+      "myBookings":"Мои бронирования",
+      "booking": "Бронирование",
+      "destination": "Направление",
+      "destination_placeholder": "Куда поедем?",
+      "date": "Дата",
+      "guests": "Гости",
+      "guests_placeholder": "2 взрослых",
+      "searching": "Поиск туров...",
+      "title": "Ваше путешествие мечты начинается здесь!",
+      "loading": "Загрузка...",
+      "form": {
+        "name": "Полное имя",
+        "phone": "Номер телефона",
+        "email": "Адрес электронной почты",
+        "address": "Ваш адрес, город, село, улица, дом",
+        "guests": "Гость(и)",
+        "selectGuests": "{{count}} Гость(ей)",
+        "date": "Дата поездки",
+        "message": "Особые пожелания / Сообщение",
+        "send": "Отправить бронирование через WhatsApp"
+      },
+      "status": {
+        "pending": "В ожидании",
+        "approved": "Одобрено",
+        "cancelled": "Отменено"
+      },
+      "alert": {
+        "loginRequired": "❌ Вы должны войти в систему, чтобы заь.",
+        "success": "✅ Ваша заявка успешно отправлена! Проверьте 'Мои бронирования'.",
+        "failed": "❌ Ошибка бронирования. Попробуйте снова."
+      }
+    },
       "pagination": {
         "title": "Доступные туры",
         "previous": "⬅ Назад",
@@ -74,13 +256,60 @@
         "ticket": "Страховка билета",
         "activities": "Развлечения",
         "travel": "Варианты путешествий",
-        "sightseeing": "Достопримечательности"
+        "sightseeing": "Достопримечательности",
+        "tailored": "Индивидуальные туры, созданные с учётом ваших предпочтений — от горных походов до проживания в юртах.",
+        "local_experts": "Местные гиды оживляют природу и традиции региона, знакомя вас с настоящей кыргызской культурой.",
+        "support_safety": "Полный спектр услуг — от трансфера до размещения; мы берём на себя все заботы, вы отдыхаете.",
+        "hidden_gems": "Откройте неочевидные направления Баткенской области и за её пределами для по-настоящему уникального путешествия."    
       }, 
+      "advertisment":{
+        "mainItem": "Есть вопросы?",
+        "contuctUs": "Свяжитесь с нами"
+      },
+      "aboutUs": {
+        "missionTitle": "Наша миссия",
+        "ourStoryTitle": "Наша история",
+        "ourStory": "Основанная в самом сердце Баткена, Кыргызстан, компания Batken Travel Service выросла из небольшой местной фирмы в международное туристическое агентство, объединяющее людей с направлениями по всему Кыргызстану и за его пределами. Мы организуем незабываемые туры не только по живописным горам и долинам Кыргызстана, но и в такие страны, как Узбекистан, Дубай, Турция и Вьетнам. Наша цель — предлагать подлинные впечатления, комфорт и индивидуальный подход каждому путешественнику, который выбирает нас.",
+        "mission": "Наша миссия — сделать путешествия доступными, вдохновляющими и наполненными смыслом, помогая каждому гостю открывать новые культуры и поддерживая ответственное и устойчивое развитие туризма по всему миру."
+      },
+      "contact":{
+        "contacts": "Контакты",
+        "location": "Адрес",
+        "city": "Город Баткен",
+        "street": "Сайдуман Ажы 2/8",
+        "floor": "2-й этаж",
+        "phone": "Телефон",
+        "hours": "Часы работы",
+        "workingHours": "8:00 - 20:00"
+      },
+      "ratings": {
+        "noRatings": "Пока нет оценок",
+        "reviews": "Отзывов",
+        "rateThisTour": "Оцените этот тур:",
+        "thanks": "Спасибо!",
+        "averageRating": "Средняя оценка",
+        "notRatedYet": "Еще не оценено",
+        "totalRatings": "Всего оценок"
+      },
       "resources":{
         "hubspotByNumbers": "HubSpot в цифрах",
         "learnMore": "Узнать больше",
         "loading": "Загрузка"
-      },        
+      }, 
+      "partners" : {
+        "title": "Наши надежные партнёры",
+        "loading": "Загрузка партнёров...",
+        "noPhotos": "Фотографии партнёров не найдены.",
+        "subtitle": "Мы гордимся сотрудничеством с ведущими компаниями по всему миру.",
+        "whyTitle": "Почему наши партнёры выбирают нас",
+        "whyText": "Наши партнёры доверяют нам за преданность делу, инновации и стремление к совершенству. Вместе мы создаём возможности для роста и предоставляем исключительную ценность нашим клиентам."
+      },
+      "customers":{
+        "title": "Наши счастливые клиенты",
+        "comments": "Отзывы", 
+        "writeCpomment": "Написать отзыв",
+        "customerNotFound": "Отзывы клиентов не найдены."
+      } ,
       "footer": {
       "home": "Главная",
       "tours": "Туры",
