Initial full UI build with responsive layout and admin dashboard

--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -263,7 +263,7 @@
         "hidden_gems": "Откройте неочевидные направления Баткенской области и за её пределами для по-настоящему уникального путешествия."    
       }, 
       "advertisment":{
-        "mainItem": "Есть вопросы?",
+        "mainItem": "Есть вопросы",
         "contuctUs": "Свяжитесь с нами"
       },
       "aboutUs": {
